no longer using jdk.incubator.httpclient, because windows app doesn't start with `--add-modules` arg in cfg file